Mobile and Desktop Header menu

--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^0.2.3",
     "@types/node": "20.6.2",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.525.0",
     "next": "13.5.1",
+    "nprogress": "^0.2.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
