--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "framer-motion": "^12.23.12",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
     "next": "13.5.1",
     "nprogress": "^0.2.0",
